[package]
name = "load64"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13", features = ["image"] }
uuid = { version = "1.20.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
manual_let_else = "allow"
